--- a/mysql-e-sql/index.html
+++ b/mysql-e-sql/index.html
@@ -1,3 +1,14 @@
 <h1>mysql</h1><br><br>
 
-oi
+mysql é um sistema de gestao de bases de dados relacionais. particular ou comercial<br>
+mysql e mariadb sao extremamente parecidos<br>
+bases de dados relacional, dados sao armazenados em tabelas, as tabelas podem ter ralaçoes entre si atraves de chaves, a comunicaçao é feita atravez de SQL<br><br>
+
+<b>SQL</b> structured query language<br>
+linguagem usada para construir queries, que sao instruçoes para comunicar com a base de dados<br>
+com SQL podemos pesquisar, inserir, atualizar e eliminar dados, bem como altera a estrutura da nossa base de dados<br><br>
+
+base de dados<br>
+..tabela<br>
+....coluna<br>
+......dados<br><br>
