--- a/mysql-e-sql/index.html
+++ b/mysql-e-sql/index.html
@@ -11,4 +11,17 @@ com SQL podemos pesquisar, inserir, atualizar e eliminar dados, bem como altera 
 base de dados<br>
 ..tabela<br>
 ....coluna<br>
-......dados<br><br>
+......dados<br>
+
+<hr>
+
+<h2>relaçoes</h2> <br>
+<b>primary key</b> valor unico usado para relacionar dados entre tabelas, so pode exestir uma PK por tabela <br>
+<b>foreign key</b> valor que da suporte a chave primaria na execuçao de queries <br><br>
+
+<b>relaçao de um para muitos</b> uma tabela 'pessoas' e uma tabela 'emails' uma pessoa pode ter varios emais, mas um email nao pode ter varias pessoas <br><br>
+
+<b>relaçao de muitos para muitos</b> imagine uma tabela 'encomendas' em que cada encomenda tem um id, e uma 'produtos' que cada produto tem um id, e uma tabela que liga os dois id... a encomenda id 1, tem produto id 8 <br><br>
+
+<b>relaçao de um para um</b>
+
