--- a/mysql-e-sql/index.html
+++ b/mysql-e-sql/index.html
@@ -1,4 +1,14 @@
-<h1>mysql</h1><br><br>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+
+<h1>mysql</h1>
 
 mysql é um sistema de gestao de bases de dados relacionais. particular ou comercial<br>
 mysql e mariadb sao extremamente parecidos<br>
@@ -15,7 +25,7 @@ base de dados<br>
 
 <hr>
 
-<h2>relaçoes</h2> <br>
+<h2>relaçoes</h2>
 <b>primary key</b> valor unico usado para relacionar dados entre tabelas, so pode exestir uma PK por tabela <br>
 <b>foreign key</b> valor que da suporte a chave primaria na execuçao de queries <br><br>
 
@@ -23,5 +33,14 @@ base de dados<br>
 
 <b>relaçao de muitos para muitos</b> imagine uma tabela 'encomendas' em que cada encomenda tem um id, e uma 'produtos' que cada produto tem um id, e uma tabela que liga os dois id... a encomenda id 1, tem produto id 8 <br><br>
 
-<b>relaçao de um para um</b>
+<b>relaçao de um para um</b><br>
 
+<hr>
+
+<h2>Schema e data types</h2>
+<b>SCHEMA</b> estrutura da tabela e as suas relaçoes. serve para definir as tabelas, colunas, tipos de dados, relaçoes etc <br>
+<b>o que é necessario para criar uma base de dados?</b> servidor mwsql / utilizando sql atraves de uma linguagem de programaçao / aplicaçao que permite a visualizaçao / importaçao de bases de dados
+
+
+</body>
+</html>
