--- a/mysql-e-sql/index.html
+++ b/mysql-e-sql/index.html
@@ -39,7 +39,13 @@ base de dados<br>
 
 <h2>Schema e data types</h2>
 <b>SCHEMA</b> estrutura da tabela e as suas relaçoes. serve para definir as tabelas, colunas, tipos de dados, relaçoes etc <br>
-<b>o que é necessario para criar uma base de dados?</b> servidor mwsql / utilizando sql atraves de uma linguagem de programaçao / aplicaçao que permite a visualizaçao / importaçao de bases de dados
+<b>o que é necessario para criar uma base de dados?</b> servidor mwsql / utilizando sql atraves de uma linguagem de programaçao / aplicaçao que permite a visualizaçao / importaçao de bases de dados <br><br>
+<b>data type</b><br>
+integer - numeros inteiros <br>
+float - numeros com casas decimais <br>
+varchar - alfanumericos strings <br>
+datetime - datas e horas <br>
+
 
 
 </body>
