--- a/mysql-e-sql/index.html
+++ b/mysql-e-sql/index.html
@@ -46,6 +46,13 @@ float - numeros com casas decimais <br>
 varchar - alfanumericos strings <br>
 datetime - datas e horas <br>
 
+<hr>
+
+<h2>SQL</h2>
+unsigned = so valores positivos <br>
+auto-increment = sequencial <br>
+primary key = <br>
+null = pode ser nulo <br>
 
 
 </body>
