--- a/mysql-e-sql/index.html
+++ b/mysql-e-sql/index.html
@@ -52,7 +52,16 @@ datetime - datas e horas <br>
 unsigned = so valores positivos <br>
 auto-increment = sequencial <br>
 primary key = <br>
-null = pode ser nulo <br>
+null = pode ser nulo <br><br>
+
+INSERT INTO tabela VALUES()<br>
+now() para datas created_at, updated_at <br>
+SELECT * FROM tabela <br>
+* all <br>
+DELETE FROM tabela WHERE id=1 <br>
+<hr>
+
+
 
 
 </body>
