--- a/mysql-e-sql/index.html
+++ b/mysql-e-sql/index.html
@@ -59,9 +59,17 @@ now() para datas created_at, updated_at <br>
 SELECT * FROM tabela <br>
 * all <br>
 DELETE FROM tabela WHERE id=1 <br>
+CREATE DATABASE IF NOT EXISTS 'bd' <br>
+DROP DATABASE IF EXISTS 'bd' <br>
+CREATE TABLE IF NOT EXISTS 'tabela' <br>
+DROP TABLE IF EXISTS 'tabela'
+
+
 <hr>
 
-
+para exportar: database drop, create <br>
+data insert <br>
+output single .sql file <br>
 
 
 </body>
